force-app/main/default/objects/Bug_Fix__c/Bug_Fix__c.object-meta.xml
<CustomObject>
    <label>Bug Fix</label>
    <nameField>
        <displayFormat>BF-{0000}</displayFormat>
        <label>Bug Fix No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Fixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>