force-app/main/default/objects/Bug_Fix__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipName>Enhancements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>