force-app/main/default/objects/Bug_Fix__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <label>Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipName>Enhancements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>