force-app/main/default/objects/Bug_Fix__c/fields/Defect_Description__c.field-meta.xml
<CustomField>
    <fullName>Defect_Description__c</fullName>
    <formula>Defect__r.Short_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Description</label>
    <type>Text</type>
</CustomField>